<resources>
    <string name="app_name">Quiz</string>
    <string name="question_num">Question №</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="submit_button">Submit</string>
    <string name="share_button">Send</string>
    <string name="back_button">Repeat</string>
    <string name="exit_button">Exit</string>
    <string name="subject">Quiz results</string>
    <string name="result_template">Your result: %d %%</string>>
    <string name="answer_template">Your answer: %s</string>
</resources>