<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:navigationContentDescription="Back to the previous question"
            app:navigationIcon="@drawable/ic_baseline_chevron_left_24"
            app:title="@string/question_num" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <FrameLayout
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:foreground="@drawable/tabbar_shadow"
            android:background="@drawable/tabbar_deep_orange"
            android:elevation="4dp"></FrameLayout>

        <FrameLayout
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:foreground="@drawable/tabbar_shadow"
            android:background="@drawable/tabbar_yellow"
            android:elevation="0dp"></FrameLayout>

        <FrameLayout
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:foreground="@drawable/tabbar_shadow"
            android:background="@drawable/tabbar_light_green"
            android:elevation="0dp">        </FrameLayout>

        <FrameLayout
            android:id="@+id/tab4"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:foreground="@drawable/tabbar_shadow"
            android:background="@drawable/tabbar_cyan"
            android:elevation="0dp"></FrameLayout>

        <FrameLayout
            android:id="@+id/tab5"
            android:layout_width="wrap_content"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:foreground="@drawable/tabbar_shadow"
            android:background="@drawable/tabbar_deep_purple"
            android:elevation="0dp"></FrameLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:elevation="4dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_start_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_end_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_top_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/margin_bottom_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />


            <TextView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
                app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
                app:layout_constraintTop_toTopOf="@id/margin_top_guideline"
                tools:text="Est-ce qu'il travaille a Paris?" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
                app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
                app:layout_constraintTop_toBottomOf="@id/question">

                <RadioButton
                    android:id="@+id/option_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Option 1" />

                <RadioButton
                    android:id="@+id/option_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Option 2" />

                <RadioButton
                    android:id="@+id/option_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Option 3" />

                <RadioButton
                    android:id="@+id/option_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:checked="true"
                    tools:text="Option 4" />

                <RadioButton
                    android:id="@+id/option_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="Option 5" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/next_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="40dp"
        android:text="@string/prev_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>